[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/ingame_menu.gd" type="Script" id=1]

[node name="InGameMenu" type="Popup"]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0

[node name="Title" type="Label" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -136.0
margin_right = 136.0
margin_bottom = 118.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pause Menu"
align = 1
valign = 1

[node name="ButtonContainer" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.0
margin_top = -63.0
margin_right = 67.0
margin_bottom = 63.0

[node name="ResumeButton" type="Button" parent="Background/ButtonContainer"]
margin_right = 134.0
margin_bottom = 20.0
text = "Resume"

[node name="MainMenuButton" type="Button" parent="Background/ButtonContainer"]
margin_top = 24.0
margin_right = 134.0
margin_bottom = 44.0
text = "Back to Main Menu"
